plugins {
  id 'java-library'
	id 'eclipse'
	id 'com.github.johnrengelman.shadow' version '7.0.0'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(16)

version = "1.17.1"
group = 'com.github.nearata.parties'
compileJava.options.encoding = 'UTF-8'

repositories {
  maven { url 'https://papermc.io/repo/repository/maven-public/' }
	maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
	maven { url 'https://oss.sonatype.org/content/groups/public/' }
	maven { url 'https://jitpack.io' }
	maven { url 'https://repo.codemc.org/repository/maven-public/' }
  mavenCentral()
}

dependencies {
	compileOnly group: 'org.spigotmc', name: 'spigot-api', version: '1.17-R0.1-SNAPSHOT'
	compileOnly group: 'dev.jorel.CommandAPI', name: 'commandapi-core', version: '6.3.0'

	implementation group: 'com.electronwill.night-config', name:'toml', version: '3.6.0'
	//implementation group: 'net.kyori', name: 'adventure-text-minimessage', version: '4.1.0-SNAPSHOT'
}

java {
  withJavadocJar()
  withSourcesJar()
}

shadowJar {
  classifier ''
  relocate 'com.electronwill.nightconfig', 'com.github.nearata.parties.nightconfig'
}

build.dependsOn shadowJar
